2010-07-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	PR target/44707
	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address): Recognize
	(lo_sum (high ...) ...) patterns generated by earlier passes.

2010-07-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/install.texi (Prerequisites): Document Perl requirement on
	Solaris 2.
	(Specific, *-*-solaris2*): Document GNU c++filt requirement.

2010-07-02  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44777
	* tree-cfg.c (gimple_block_ends_with_call_p): Handle empty BBs.

2010-07-02  Jan Hubicka  <jh@suse.cz>

	PR middle-end/44706
	* predict.c (predict_paths_for_bb): Handle case when control dependence
	BB has only abnormal edges.

2010-07-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44748
	* tree-ssa-ccp.c (fold_const_aggregate_ref): Properly handle
	the embedded conversion in MEM_REFs.

2010-07-01  López-Ibáñez  <manu@gcc.gnu.org>

	* reload.c: Include toplev.h.
	* recog.c:  Likewise.
	* Makefile.in: Adjust dependencies.

2010-07-01  Jakub Jelinek  <jakub@redhat.com>

	PR debug/44694
	* dwarf2out.c (reg_loc_descriptor): For eliminated arg_pointer_rtx
	or frame_pointer_rtx use DW_OP_fbreg offset DW_OP_stack_value.

2010-07-01  Richard Guenther  <rguenther@suse.de>

	* emit-rtl.c (set_mem_attributes_minus_bitpos): Use unsigned
	types for offsets.

2010-07-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	PR target/44732
	* config/ia64/ia64.c (ia64_register_move_cost): Remove stray '{'.

	* config/ia64/ia64.c (ia64_register_move_cost): Fix argument types.

2010-07-01  Bernd Schmidt  <bernds@codesourcery.com>

	PR target/44727
	* config/i386/i386.md (peephole2 for arithmetic ops with memory):
	Make sure operand 0 dies.

2010-07-01  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42834
	PR middle-end/44468
	* doc/gimple.texi (is_gimple_mem_ref_addr): Document.
	* doc/generic.texi (References to storage): Document MEM_REF.